# MLFMA

./: .gitignore  CMakeLists.txt  clock.h  config.h  leaf.cpp  leaf.h  math.h  mlfma.cpp  mlfma.h  nbor.cpp  node.cpp  node.h  rwg.cpp  rwg.h  src.h  stem.cpp  stem.h  tables.h  triangle.cpp  triangle.h
plt/: plotCurr.m  plotFarfield.asv  plotFarfield.m  plotFarfieldForL.m  plotL2LCoeffs.m  plotSol.asv  plotSol.m  plotSols.m  plotVals.m  quiver3InLogScale.m  rwg_n480_iter.fig  tRWGs.m
src/: clock.h  config.h  excite.h  fileio.h  interp.cpp  interp.h  leaf.cpp  leaf.h  main.h  map.h  maps.h  math.cpp  math.h  mlfma.cpp  mlfma.h  nbor.cpp  node.cpp  node.h  operator.h  phys.h  rwg.cpp  rwg.h  solver.cpp  solver.h  src.h  stem.cpp  stem.h  tables.cpp  tables.h  triangle.cpp  triangle.h  types.h
src/fmm/: angles.cpp  angles.h  fmm.h  leaf.cpp  leaf.h  node.cpp  node.h  stem.cpp  stem.h  tables.cpp  tables.h
src/sources/: dipole.cpp  dipole.h  rwg.cpp  rwg.h  source.h  triangle.cpp  triangle.h
test/: tFarfield.cpp  tInterp.cpp  tMath.cpp  tNearfield.cpp  tNodes.cpp  tRwg.cpp  tTransl.cpp
